hosts/nandstorm/k8s/apps/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        hostPath:
          path: /persist/jellyseerr
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.106
  selector:
    app: jellyseerr
  ports:
  - port: 5055
    targetPort: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - jellyseerr.thejeffer.net
    secretName: jellyseerr-tls
  rules:
  - host: jellyseerr.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 5055
