hosts/nandstorm/k8s/apps/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        hostPath:
          path: /persist/radarr
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /media
          type: Directory
      - name: downloads
        hostPath:
          path: /media/downloads
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.103
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - radarr.thejeffer.net
    secretName: radarr-tls
  rules:
  - host: radarr.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
