hosts/nandstorm/k8s/apps/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /data/media
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        hostPath:
          path: /persist/sonarr
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /media
          type: Directory
      - name: downloads
        hostPath:
          path: /media/downloads
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.104
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sonarr.thejeffer.net
    secretName: sonarr-tls
  rules:
  - host: sonarr.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
