hosts/nandstorm/k8s/apps/transmission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: lscr.io/linuxserver/transmission:latest
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        hostPath:
          path: /persist/transmission
          type: DirectoryOrCreate
      - name: downloads
        hostPath:
          path: /media/downloads
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.102
  selector:
    app: transmission
  ports:
  - port: 9091
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - transmission.thejeffer.net
    secretName: transmission-tls
  rules:
  - host: transmission.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 9091
